2004-02-18  Richard Earnshaw  <rearnsha@arm.com>

	PR target/13866
	* arm.c (load_multiple_operation): Don't insist that the source reg
	of a post-increment component is the same as the destination.
	(store_multiple_operation): Likewise.

2004-02-18  Paul Brook  <paul@codesourcery.com>

	* rtlanal.c (rtx_varies_p): Return 0 for NULL_RTX

2004-02-18  Mark Mitchell <mark@codesourcery.com>

	PR c++/11326
	* config/ia64/ia64.c (ia64_struct_value_rtx): Cope with NULL
	fntype.

2004-02-18  Paul Brook  <paul@codesourcery.com>

	PR debug/12934
	* dwarf2out.c (loc_descriptor_from_tree): Handle
	EXPR_WITH_FILE_LOCATION.

2004-02-17  Mark Mitchell  <mark@codesourcery.com>

	PR c++/11326
	* c-common.c (flag_abi_version): Remove.
	* c-common.h (flag_abi_version): Likewise.
	* c-opts.c (c_common_handle_option): Remove OPT_fabi_version case.
	* c.opt (fabi-version): Remove.
	* calls.c (expand_call): Always pass a function type to
	struct_value_rtx.  Use convert_memory_address.
	* common.opt (fabi-version): Add it.
	* flags.h (flag_abi_version): Likewise.
	(abi_version_at_least): New macro.
	* opts.c (common_handle_option): Add OPT_fabi_version.
	* toplev.c (flag_abi_version): Define it.
	* config/ia64/ia64.h (STRUCT_VALUE_REGNUM): Remove.
	* config/ia64/ia64.c (TARGET_STRUCT_VALUE_RTX): Define it.
	(ia64_struct_retval_addr_is_first_parm_p):
	New function.
	(ia64_output_mi_thunk): Use it.
	(ia64_struct_value_rtx): New function.

2004-02-18  Alan Modra  <amodra@bigpond.net.au>

	PR optimization/14119
	* combine.c (try_combine): When attemting to fix unrecognized insns,
	don't delete SETs marked with REG_EH_REGION notes.

2004-02-17  Jan Hubicka  <jh@suse.cz>

	PR bootstrap/14180
	* cselib.c (remove_useless_values): Do not access released
	memory.

2004-02-17  Ulrich Weigand  <uweigand@de.ibm.com>

	* combine.c (simplify_if_then_else): Do not replace 
	(if_then_else (ne reg 0) (0) (const_int)) by (reg) if the
	modes differ.

2004-02-17  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
